--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/error_template.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/error_template.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import play.api.Configuration
-@(pageTitle: String, heading: String, message: String)(implicit messages: Messages, configuration: Configuration)
+@(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, configuration: Configuration)
 
 @contentHeader = {
     <h1>@heading</h1>
