--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
@@ -28,7 +28,7 @@
         mainContent: Html = HtmlFormat.empty,
         serviceInfoContent: Html = HtmlFormat.empty,
         scriptElem: Option[Html] = None,
-        gaCode: Seq[String] = Seq.empty)(implicit messages: Messages, configuration: Configuration)
+        gaCode: Seq[String] = Seq.empty)(implicit request: Request[_], messages: Messages, configuration: Configuration)
 
 @betaBanner = {
     @uiLayouts.betaBanner(userLoggedIn = false,
