--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/main_template.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/main_template.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2020 HM Revenue & Customs
+ * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,8 +14,13 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.play.views.html.layouts
 @import play.api.Configuration
+
+@this(
+    uiSidebar: Sidebar,
+    uiArticle: Article,
+    govukWrapper: govuk_wrapper
+)
 @(title: String,
   sidebarLinks: Option[Html] = None,
   contentHeader: Option[Html] = None,
@@ -27,16 +32,16 @@
 
 @sidebar = {
     @if(sidebarLinks.isDefined) {
-        @layouts.sidebar(sidebarLinks.get, Some("sidebar"))
+        @uiSidebar(sidebarLinks.get, Some("sidebar"))
     }
 }
 
-@govuk_wrapper(
+@govukWrapper(
                title,
                mainClass,
                bodyClasses = bodyClasses,
                sidebar = sidebar,
                contentHeader = contentHeader,
-               mainContent = layouts.article(mainContent),
+               mainContent = uiArticle(mainContent),
                serviceInfoContent = serviceInfoContent,
                scriptElem = scriptElem)
