--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2020 HM Revenue & Customs
+ * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,14 @@
 @import uk.gov.hmrc.agentepayeregistrationfrontend.controllers.routes.AgentEpayeRegistrationController
 @import play.api.Configuration
 
+@this(
+    uiMainTemplate: main_template
+)
+
+
 @()(implicit request: Request[_], messages: Messages, config: Configuration)
 
-@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("start.title"), bodyClasses = None) {
+@uiMainTemplate(title = Messages("start.title"), bodyClasses = None) {
 
     <h1 class="heading-xlarge">@Messages("start.title")</h1>
     
