--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2020 HM Revenue & Customs
+ * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,20 +14,26 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.play.views.html.helpers.{form, input, errorSummary}
 @import uk.gov.hmrc.agentepayeregistrationfrontend.controllers.routes.AgentEpayeRegistrationController
 @import uk.gov.hmrc.agentepayeregistrationfrontend.models.RegistrationRequest
 @import play.api.Configuration
 
+@this(
+    uiMainTemplate: main_template,
+    uiForm: FormWithCSRF,
+    uiInput: Input,
+    uiErrorSummary: ErrorSummary,
+    errorPrefix: error_prefix
+)
 @(detailsForm: Form[RegistrationRequest])(implicit request: Request[_], messages: Messages, config: Configuration)
 
-@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = error_prefix(detailsForm) + Messages("details.address.title"), bodyClasses = None) {
+@uiMainTemplate(title = errorPrefix(detailsForm) + Messages("details.address.title"), bodyClasses = None) {
 
 @if(detailsForm.hasErrors){
-    @errorSummary(Messages("error.summary.heading"), detailsForm, Seq.empty, Some("detailsForm"))
+    @uiErrorSummary(Messages("error.summary.heading"), detailsForm, Seq.empty, Some("detailsForm"))
 }
 
-@form(
+@uiForm(
 action = AgentEpayeRegistrationController.details,
 'class -> "form js-form") {
 
@@ -36,7 +42,7 @@ action = AgentEpayeRegistrationController.details,
 
 
     <div class="form-group">
-        @input(
+        @uiInput(
             detailsForm("address.addressLine1"),
             '_label -> Messages("details.address.addressline1.label"),
             '_inputClass -> "form-control input--cleared",
@@ -45,7 +51,7 @@ action = AgentEpayeRegistrationController.details,
     </div>
 
     <div class="form-group">
-        @input(
+        @uiInput(
             detailsForm("address.addressLine2"),
             '_label -> Messages("details.address.addressline2.label"),
             '_inputClass -> "form-control input--cleared",
@@ -54,7 +60,7 @@ action = AgentEpayeRegistrationController.details,
     </div>
 
     <div class="form-group">
-        @input(
+        @uiInput(
             detailsForm("address.addressLine3"),
             '_label -> Messages("details.address.addressline3.label"),
             '_inputClass -> "form-control input--cleared",
@@ -63,7 +69,7 @@ action = AgentEpayeRegistrationController.details,
     </div>
 
     <div class="form-group">
-        @input(
+        @uiInput(
             detailsForm("address.addressLine4"),
             '_label -> Messages("details.address.addressline4.label"),
             '_inputClass -> "form-control input--cleared",
@@ -72,7 +78,7 @@ action = AgentEpayeRegistrationController.details,
     </div>
 
     <div class="form-group">
-        @input(
+        @uiInput(
             detailsForm("address.postcode"),
             '_label -> Messages("details.address.postcode.label"),
             '_inputClass -> "form-control input--cleared postcode input--small",
