--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/error_template.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/error_template.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2020 HM Revenue & Customs
+ * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,10 @@
  *@
 
 @import play.api.Configuration
+
+@this(
+    govukWrapper: govuk_wrapper
+)
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, configuration: Configuration)
 
 @contentHeader = {
@@ -25,4 +29,4 @@
     <p>@message</p>
 }
 
-@govuk_wrapper(title = pageTitle, contentHeader = Some(contentHeader), mainContent = mainContent)
+@govukWrapper(title = pageTitle, contentHeader = Some(contentHeader), mainContent = mainContent)
