--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
@@ -19,7 +19,7 @@
 @this(
     appConfig: uk.gov.hmrc.agentepayeregistrationfrontend.config.AppConfig,
     uiBetaBanner: BetaBanner,
-    uiHead: Head,
+    uiHead: HeadWithTrackingConsent,
     uiHeaderNav: HeaderNav,
     uiFooter: Footer,
     uiMainContentHeader: MainContentHeader,
@@ -52,14 +52,7 @@
 }
 
 @head = {
-@if(appConfig.googleTagManagerId != "N/A") {
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','@appConfig.googleTagManagerId');
-    </script>
-}
+
 @uiHead(
     linkElem = None,
     headScripts = Some(headScripts))
@@ -72,11 +65,7 @@
 @headerNavLinks = {}
 
 @insideHeader = {
-@if(appConfig.googleTagManagerId != "N/A") {
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=@appConfig.googleTagManagerId" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-}
+
 @uiHeaderNav(
     navTitle = None,
     navTitleLink = None,
@@ -92,8 +81,8 @@
 
 @bodyEnd = {
 @uiFooter(
-    analyticsToken = Some(appConfig.analyticsToken),
-    analyticsHost = appConfig.analyticsHost,
+    analyticsToken = None,
+    analyticsHost = "",
     ssoUrl = None,
     scriptElem = Some(scriptElement),
     gaCalls = None,
