--- a/app/views/ConfirmationView.scala.html
+++ b/app/views/ConfirmationView.scala.html
@@ -15,10 +15,12 @@
  *@
 
 @import uk.gov.hmrc.domain.PayeAgentReference
+@import config.FrontendAppConfig
 
 @this(
         layout: templates.Layout,
-        govukInsetText: GovukInsetText
+        govukInsetText: GovukInsetText,
+        appConfig: FrontendAppConfig
 )
 
 @(payeAgentReference: PayeAgentReference)(implicit request: Request[_], messages: Messages)
@@ -41,5 +43,10 @@
  <h1 class="govuk-heading-m">@messages("confirmation.what-happens-next")</h1>
 
  <p class="govuk-body">@Messages("confirmation.what-happens-next-info")</p>
+
+<p class="govuk-body">
+    <a href="@appConfig.exitSurveyUrl" class="govuk-link">@messages("confirmation.survey.linkText")</a> @messages("confirmation.survey.time")
+</p>
+
 
 }
