--- a/app/views/SessionExpiredView.scala.html
+++ b/app/views/SessionExpiredView.scala.html
@@ -26,7 +26,7 @@
 
  <p class="govuk-body">@Messages("sessionExpired.info")</p>
 
- <a href=@routes.IndexController.onPageLoad() role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+ <a href=@routes.IndexController.onPageLoad role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
   @messages("sessionExpired.startAgain.link")
   <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
