DL-12129 add Welsh for entire service

--- a/app/views/CheckYourAnswersView.scala.html
+++ b/app/views/CheckYourAnswersView.scala.html
@@ -28,7 +28,7 @@
 
     @govukSummaryList(list)
 
-    <h1 class="govuk-heading-m">@messages("Now send your application")</h1>
+    <h1 class="govuk-heading-m">@messages("checkYourAnswers.send")</h1>
 
     @govukWarningText(
      WarningText(content = Text(messages("checkYourAnswers.warning")))
