DL-13435 update page title

--- a/app/views/YourAgentNameView.scala.html
+++ b/app/views/YourAgentNameView.scala.html
@@ -27,7 +27,7 @@
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("enterYourAgentName.title"))) {
+@layout(pageTitle = title(form, messages("enterYourAgentName.heading"))) {
 
     @formHelper(action = routes.YourAgentNameController.onSubmit(mode)) {
 
