--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -30,7 +30,7 @@
         pageTitle: String,
         showBackLink: Boolean = true,
         timeout: Boolean = true
-)(contentBlock: Html)(implicit request: Request[_], messages: Messages)
+)(contentBlock: Html)(implicit request: RequestHeader, messages: Messages)
 
 @head = {
     @if(timeout) {
