DL-14843: Added autocomplete to input fields

--- a/app/views/YourAgentNameView.scala.html
+++ b/app/views/YourAgentNameView.scala.html
@@ -42,6 +42,7 @@
             )
             .withWidth(Full)
             .withHint(HintViewModel(messages("enterYourAgentName.hint")))
+            .copy(attributes = Map("autocomplete" -> "name"))
         )
 
         @govukButton(
