--- a/app/views/YourBusinessAddressView.scala.html
+++ b/app/views/YourBusinessAddressView.scala.html
@@ -46,6 +46,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                         .copy(attributes = Map("autocomplete" -> "address-line1"))
             )
 
 
@@ -56,6 +57,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                        .copy(attributes = Map("autocomplete" -> "address-line2"))
             )
 
 
@@ -66,6 +68,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                        .copy(attributes = Map("autocomplete" -> "address-line3"))
             )
 
 
@@ -76,6 +79,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                        .copy(attributes = Map("autocomplete" -> "address-level1"))
             )
 
 
@@ -86,6 +90,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(OneThird)
+                        .copy(attributes = Map("autocomplete" -> "postal-code"))
             )
 
         </div>
