--- a/app/views/YourContactDetailsView.scala.html
+++ b/app/views/YourContactDetailsView.scala.html
@@ -48,6 +48,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                        .copy(attributes = Map("autocomplete" -> "name"))
             )
 
             @govukInput(
@@ -57,6 +58,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                        .copy(inputType = "email",attributes = Map("autocomplete" -> "email"))
             )
 
             @govukInput(
@@ -66,6 +68,7 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
+                        .copy(inputmode= Some("numeric"), attributes = Map("autocomplete" -> "tel"))
             )
         </div>
 
