DL-16642: Added correct input type

--- a/app/views/YourContactDetailsView.scala.html
+++ b/app/views/YourContactDetailsView.scala.html
@@ -68,7 +68,8 @@
                             .withCssClass("govuk-label--m")
                 )
                         .withWidth(Full)
-                        .copy(inputmode= Some("tel"), attributes = Map("autocomplete" -> "tel"))
+                        .withType("tel")
+                        .copy(attributes = Map("autocomplete" -> "tel", "type" -> "tel"))
             )
         </div>
 
