DL-16642: Added correct input type

--- a/app/views/YourContactDetailsView.scala.html
+++ b/app/views/YourContactDetailsView.scala.html
@@ -69,7 +69,7 @@
                 )
                         .withWidth(Full)
                         .withType("tel")
-                        .copy(attributes = Map("autocomplete" -> "tel", "type" -> "tel"))
+                        .copy(attributes = Map("autocomplete" -> "tel"))
             )
         </div>
 
