DL-16642: Added correct input type

--- a/app/views/YourContactDetailsView.scala.html
+++ b/app/views/YourContactDetailsView.scala.html
@@ -57,8 +57,9 @@
                     label = LabelViewModel(messages("yourContactDetails.emailAddress.heading"))
                             .withCssClass("govuk-label--m")
                 )
+                        .withType("email")
                         .withWidth(Full)
-                        .copy(inputmode = Some("email"),attributes = Map("autocomplete" -> "email"))
+                        .copy(attributes = Map("autocomplete" -> "email"))
             )
 
             @govukInput(
